# console_app_for_big_data

./: .gitignore  README.md  pyproject.toml
console_app_for_big_data/: get_regions.py  get_top_or_latest.py  sell.py
scripts/: report.py  sell_script.py
tests/: dct_for_tests.py  test_get_regions.py  test_get_top_or_latest.py  test_sell.py
