[tool.poetry]
name = "console-app-for-big-data"
version = "0.1.0"
description = ""
authors = ["DaniilMashkov <dankeeeez@gmail.com>"]
readme = "README.md"
packages = [{include = "console_app_for_big_data"}]

[tool.poetry.dependencies]
python = "^3.10"
dask = {extras = ["dataframe"], version = "^2022.12.0"}
console-progressbar = "^1.1.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = 'scripts.report:get_report'
sell = 'scripts.sell_script:get_sell'
